
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int uint32 ;
struct TYPE_6__ {int end; int p; } ;
typedef TYPE_1__* STREAM ;


 int DEBUG (char*) ;
 int SEC_ENCRYPT ;
 int hexdump (int,int) ;
 int licence_issued ;
 int mcs_send (TYPE_1__*) ;
 int out_uint32_le (TYPE_1__*,int) ;
 int s_pop_layer (TYPE_1__*,int ) ;
 int sec_hdr ;

void
sec_send(STREAM s, uint32 flags)
{
 int datalen;

 s_pop_layer(s, sec_hdr);
 if (!licence_issued || (flags & SEC_ENCRYPT))
  out_uint32_le(s, flags);

 if (flags & SEC_ENCRYPT)
 {
  flags &= ~SEC_ENCRYPT;
  datalen = s->end - s->p - 8;







 }

 mcs_send(s);
}
